@@ -1,3 +1,9 @@
+Sat Jun 17 16:11:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/topic-label.c:
+	  - Only show the expander triangle if the topic is long enough that
+	    it can wrap. (#326460)
+
 Fri Jun 16 22:45:51 MDT 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/fe-gnome.c:
